c/examples/gcc/testsuite/c-c++-common/ubsan/sanitize-recover-1.c
/* { dg-do compile } */
/* { dg-options "-fsanitize-recover=unreachable" } */

int i;

/* { dg-error ".-fsanitize-recover=unreachable. is not supported" "" { target *-*-* } 0 } */
